feat: add LARK_TEMPLATE_VERSION support with default value
Add support for Lark template version configuration through environment variable and config file. The template version can now be set via LARK_TEMPLATE_VERSION secret (default: 1.0.0) and template_version parameter in config.yaml. Updated workflow, documentation, and example configuration accordingly. Renamed config parameter from template_version_name to template_version for consistency.

--- a/.github/workflows/daily_arxiv.yml
+++ b/.github/workflows/daily_arxiv.yml
@@ -26,6 +26,7 @@ jobs:
       env:
         ARXIV_LARK__WEBHOOK_URL: ${{ secrets.LARK_WEBHOOK_URL }}
         ARXIV_LARK__TEMPLATE_ID: ${{ secrets.LARK_TEMPLATE_ID }}
+        ARXIV_LARK__TEMPLATE_VERSION: ${{ secrets.LARK_TEMPLATE_VERSION || '1.0.0' }}
         ARXIV_LLM__API_KEY: ${{ secrets.LLM_API_KEY }}
         ARXIV_LLM__BASE_URL: ${{ secrets.LLM_BASE_URL }}
         ARXIV_LLM__MODEL: ${{ secrets.LLM_MODEL }}
