feat(ci): enable LLM and deep scan for daily arxiv workflow
Update the daily ArXiv workflow to use LLM analysis and deep scanning features by adding --use-llm and --deep-scan flags to the axvbot command. This enhances the paper processing capabilities by enabling more comprehensive analysis through LLM integration and deeper content scanning.

--- a/.github/workflows/daily_arxiv.yml
+++ b/.github/workflows/daily_arxiv.yml
@@ -37,7 +37,7 @@ jobs:
         ARXIV_EMAIL__SMTP_PORT: 587
         ARXIV_ARXIV__ENABLE_DEEP_SCAN: "true" # Or toggle via var
       run: |
-        uv run axvbot
+        uv run axvbot --use-llm --deep-scan
 
 
     - name: Commit and Push changes
